2013-10-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer.pm: amandaify property name.

2013-10-22  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am: Add dependencis for genversion.$(OBJEXT)

2013-10-16  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Tag 'file changed as we read it' as GOOD.

2013-10-16  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amadmin.c: Do not load the config for version subcommand.

2013-10-16  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amcryptsimple.pl: Fix for no gpg-agent or gpg2.

2013-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/gnutar.pl: Fix for fc19.

2013-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Benjamin Kerensa
	* oldrecover-src/extract_list.c: Typo.

2013-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Process.pm: Use Amanda::Debug.

2013-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Add SESSION-TOKEN property.
	* device-src/s3.h (s3_open): Add session_token argument.
	* device-src/s3-device.c: Add SESSION-TOKEN property.
	* man/xml-source/amanda-devices.7.xml: Document the new property.

2013-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Fix parsing of config override.

2013-09-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Amflush.pm: Fix.
	* perl/Amanda/Cmdfile.swg: Fix for newer swig.
	* server-src/cmdfile.c: Cleanup.

2013-09-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Amflush.pm: Perl module with amflush functionnality.
	* perl/Amanda/JSON/Amflush.pm: New JSON module for running a flush.
	* perl/Amanda/Message.pm: Add Amanda::Amflush::Message.
	* perl/Makefile.am: Add Amanda/Amflush.pm, Amanda/JSON/Amflush.pm
	* server-src/amflush.c: Remove.
	* server-src/amflush.pl: New amflush programthat use the perl module.
	* server-src/Makefile.am: Add amflush perl script.