@@ -1,3 +1,7 @@
+2013-10-28  Jean-Louis Martineau <martineau@zmanda.com>
+	* perl/Amanda/Changer.pm: Fix perl warning.
+	* perl/Amanda/ScanInventory.pm: Check for label not in tapelist.
+
 2013-10-25  Jean-Louis Martineau <martineau@zmanda.com>
 	* perl/Amanda/Changer.pm: amandaify property name.
 
